--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
             <!-- app name -->
             <!-- subtext -->
             <!-- start button to go to next page -->
-    
+
     <!-- link to AJAX cdn -->
     <!-- link to js file -->
 </body>
