Created categories.html file

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <h1>This will be a great app</h1>
     <!-- container -->
     <!-- header element -->
-        <!-- logo -->
-        <!-- div for homepage content -->
-            <!-- app name -->
-            <!-- subtext -->
-            <!-- start button to go to next page -->
-
+        <!-- logo (button) -left -->
+        <!-- settings/login (button) -right -->
+            <!-- div for homepage content -->
+                <!-- app name -->
+                <!-- subtext -->
+                <!-- start button to go to next page -->
+    
     <!-- link to AJAX cdn -->
     <!-- link to js file -->
 </body>
