Created main.js file. Added links to AJAX cdn and main.js to index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <!-- start button to go to next page -->
     
     <!-- link to AJAX cdn -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- link to js file -->
+    <script src="main.js"></script>
 </body>
 </html>
