Added page structure content to categories.html along with links to AJAX cdn, script.js, and style.css. Changed title of index.html to 'Rec App - Home'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rec App</title>
+    <title>Rec App - Home</title>
 
     <!-- link to CSS framework cdn -->
     <!-- link to style.css  -->
