Added h1 tag with content to categories.html

--- a/categories.html
+++ b/categories.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>This is the categories/genre page</h1>
+        
+
      <!-- link to AJAX cdn -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
      <!-- link to js file -->
