added button. added product title. added subtext.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rec App - Home</title>
 
     <!-- link to CSS framework cdn -->
@@ -31,15 +30,20 @@
     </div>
 
     <!-- nav bar ends  -->
-    <h1>This will be a great app</h1>
     <!-- container -->
     <!-- header element -->
     <!-- logo (button) -left -->
     <!-- settings/login (button) -right -->
     <!-- div for homepage content -->
     <!-- app name -->
+    <h1>REC</h1>
     <!-- subtext -->
+    <p>
+      Expand your world. Discover something new. Take a moment and explore with
+      us.
+    </p>
     <!-- start button to go to next page -->
+    <button class="ui secondary button">START</button>
 
     <!-- link to AJAX cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
