--- a/categories.html
+++ b/categories.html
@@ -6,6 +6,10 @@
     <title>Rec App - Categories</title>
 
     <!-- link to CSS framework cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+    />
     <!-- link to style.css  -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -33,6 +37,8 @@
 
     <!-- link to AJAX cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- script for semantic framework -->
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <!-- link to js file -->
     <script src="main.js"></script>
 </body>
