centered main page contents

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- nav bar ends  -->
 
     <!-- div for homepage content -->
-    <div class="container" id="mainPage">
+    <div class="ui column centered grid" id="mainPage">
       <!-- app name -->
       <h1>REC</h1>
       <!-- subtext -->
