added classes to main div for formatting

--- a/index.html
+++ b/index.html
@@ -36,16 +36,18 @@
     <!-- nav bar ends  -->
 
     <!-- div for homepage content -->
-    <div class="ui column centered grid" id="mainPage">
-      <!-- app name -->
-      <h1>REC</h1>
-      <!-- subtext -->
-      <p>
-        Expand your world. Discover something new. Take a moment and explore
-        with us.
-      </p>
-      <!-- start button to go to next page -->
-      <button class="ui secondary button">START</button>
+    <div class="ui vertical masterhead center aligned segment" id="mainPage">
+      <div class="ui text container">
+        <!-- app name -->
+        <h1>REC</h1>
+        <!-- subtext -->
+        <h2>
+          Expand your world. Discover something new. Take a moment and explore
+          with us.
+        </h2>
+        <!-- start button to go to next page -->
+        <button class="ui huge secondary button">START</button>
+      </div>
     </div>
 
     <!-- link to AJAX cdn -->
