added link to the start button to go to the categories page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           with us.
         </h2>
         <!-- start button to go to next page -->
-        <button class="ui huge primary button">START</button>
+        <button onclick="location.href='categories.html';" class="ui huge primary button">START</button>
       </div>
     </div>
 
