--- a/categories.html
+++ b/categories.html
@@ -23,12 +23,19 @@
     <!-- container  -->
         <!-- form title  -->
             <!-- form  -->
+            <!--Loreto, when you style these buttons, please make sure to keep the same id. Carolina :)-->
                 <!-- category button1  -->
+                <button id="fitness" class="ui huge primary button">fitness</button>
                 <!-- category button2  -->
+                <button id="chores" class="ui huge primary button">Chores</button>
                 <!-- category button3  -->
+                <button id="study" class="ui huge primary button">Study</button>
                 <!-- category button4  -->
+                <button id="calm" class="ui huge primary button">Calm</button>
                 <!-- category button5  -->
+                <button id="read" class="ui huge primary button">Read</button>
                 <!-- category button6  -->
+                <button id="dance" class="ui huge primary button">Dance</button>
     
     <!-- footer  -->
         <!-- navbar  -->
