added unsplash ajax request and cattegories buttons loop. added onclick events to the buttons

--- a/categories.html
+++ b/categories.html
@@ -25,17 +25,17 @@
             <!-- form  -->
             <!--Loreto, when you style these buttons, please make sure to keep the same id. Carolina :)-->
                 <!-- category button1  -->
-                <button id="fitness" class="ui huge primary button">fitness</button>
+                <button id="fitness" class="ui huge primary button categoryBtn">fitness</button>
                 <!-- category button2  -->
-                <button id="chores" class="ui huge primary button">Chores</button>
+                <button id="chores" class="ui huge primary button categoryBtn">Chores</button>
                 <!-- category button3  -->
-                <button id="study" class="ui huge primary button">Study</button>
+                <button id="study" class="ui huge primary button categoryBtn">Study</button>
                 <!-- category button4  -->
-                <button id="calm" class="ui huge primary button">Calm</button>
+                <button id="calm" class="ui huge primary button categoryBtn">Calm</button>
                 <!-- category button5  -->
-                <button id="read" class="ui huge primary button">Read</button>
+                <button id="read" class="ui huge primary button categoryBtn">Read</button>
                 <!-- category button6  -->
-                <button id="dance" class="ui huge primary button">Dance</button>
+                <button id="dance" class="ui huge primary button categoryBtn">Dance</button>
     
     <!-- footer  -->
         <!-- navbar  -->
