--- a/recs.html
+++ b/recs.html
@@ -14,7 +14,14 @@
 </head>
 <body>
     <h1>Get Rec'd</h1>
+    <div id="category"></div>
+    <div id="carousel"></div>
     
-    <script src="main.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- script for semantic framework -->
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+    <!-- link to js file -->
+    <script src="recs.js"></script>
 </body>
 </html>
