added initial nav bar to categories and recs pages

--- a/categories.html
+++ b/categories.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rec App - Categories</title>
 
     <!-- link to CSS framework cdn -->
@@ -11,36 +11,46 @@
       href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
     <!-- link to style.css  -->
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <!-- navbar -->
-        <!-- header -->
-            <!-- logo/home button -left -->
-            <!-- settings button -right -->
+    <div class="ui secondary pointing menu">
+      <a class="active item"> Logo Goes here </a>
+      <div class="right menu">
+        <a class="ui item"> Settings </a>
+      </div>
+    </div>
+    <!-- header -->
+    <!-- logo/home button -left -->
+    <!-- settings button -right -->
     <h1>This is the categories/genre page</h1>
-    
+
     <!-- container  -->
-        <!-- form title  -->
-            <!-- form  -->
-            <!--Loreto, when you style these buttons, please make sure to keep the same id. Carolina :)-->
-                <!-- category button1  -->
-                <button id="fitness" class="ui huge primary button categoryBtn">fitness</button>
-                <!-- category button2  -->
-                <button id="chores" class="ui huge primary button categoryBtn">Chores</button>
-                <!-- category button3  -->
-                <button id="study" class="ui huge primary button categoryBtn">Study</button>
-                <!-- category button4  -->
-                <button id="calm" class="ui huge primary button categoryBtn">Calm</button>
-                <!-- category button5  -->
-                <button id="read" class="ui huge primary button categoryBtn">Read</button>
-                <!-- category button6  -->
-                <button id="dance" class="ui huge primary button categoryBtn">Dance</button>
-    
+    <!-- form title  -->
+    <!-- form  -->
+    <!--Loreto, when you style these buttons, please make sure to keep the same id. Carolina :)-->
+    <!-- category button1  -->
+    <button id="fitness" class="ui huge primary button categoryBtn">
+      fitness
+    </button>
+    <!-- category button2  -->
+    <button id="chores" class="ui huge primary button categoryBtn">
+      Chores
+    </button>
+    <!-- category button3  -->
+    <button id="study" class="ui huge primary button categoryBtn">Study</button>
+    <!-- category button4  -->
+    <button id="calm" class="ui huge primary button categoryBtn">Calm</button>
+    <!-- category button5  -->
+    <button id="read" class="ui huge primary button categoryBtn">Read</button>
+    <!-- category button6  -->
+    <button id="dance" class="ui huge primary button categoryBtn">Dance</button>
+
     <!-- footer  -->
-        <!-- navbar  -->
-            <!-- back button -left  -->
-            <!-- home button -right  -->
+    <!-- navbar  -->
+    <!-- back button -left  -->
+    <!-- home button -right  -->
 
     <!-- link to AJAX cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -48,5 +58,5 @@
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <!-- link to js file -->
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
