--- a/index.html
+++ b/index.html
@@ -19,14 +19,6 @@
       <a class="active item"> Home </a>
       <a class="item"> Messages </a>
       <a class="item"> Friends </a>
-      <div class="right menu">
-        <div class="item">
-          <div class="ui transparent icon input">
-            <input type="text" placeholder="Search..." />
-            <i class="search link icon"></i>
-          </div>
-        </div>
-      </div>
       <!-- container -->
       <!-- header element -->
       <!-- logo (button) -left -->
@@ -49,7 +41,12 @@
           with us.
         </h2>
         <!-- start button to go to next page -->
-        <button onclick="location.href='categories.html';" class="ui huge primary button">START</button>
+        <button
+          onclick="location.href='categories.html';"
+          class="ui huge primary button"
+        >
+          START
+        </button>
       </div>
     </div>
 
