--- a/recs.html
+++ b/recs.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rec</title>
     <!-- link to CSS framework cdn -->
     <link
@@ -10,18 +10,25 @@
       href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     />
     <!-- link to style.css  -->
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- navbar -->
+    <div class="ui secondary pointing menu">
+      <a class="active item"> Logo Goes here </a>
+      <div class="right menu">
+        <a class="ui item"> Settings </a>
+      </div>
+    </div>
+
     <h1>Get Rec'd</h1>
     <div id="category"></div>
     <div id="carousel"></div>
-    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- script for semantic framework -->
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <!-- link to js file -->
     <script src="recs.js"></script>
-</body>
+  </body>
 </html>
