Hardcoded music info section in recs.html

--- a/recs.html
+++ b/recs.html
@@ -17,6 +17,20 @@
     <div id="category"></div>
     <div id="carousel"></div>
     
+    <!-- populate area with music info - list of generated artists' albums-->
+    <h4>Artist Disography</h4>
+    <div id="disog">
+      <p>Album1: Title</p>
+      <p>Released: YYYY</p>
+      <p>Album2: Title</p>
+      <p>Released: YYYY</p>
+      <p>Album3: Title</p>
+      <p>Released: YYYY</p>
+      <p>Album4: Title</p>
+      <p>Released: YYYY</p>
+      <p>Album5: Title</p>
+      <p>Released: YYYY</p>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- script for semantic framework -->
