wrapped main content of all pages in a main div class. added footer elements to pages.

--- a/categories.html
+++ b/categories.html
@@ -26,28 +26,35 @@
     <!-- settings button -right -->
     <h1>This is the categories/genre page</h1>
 
-    <!-- container  -->
-    <!-- form title  -->
-    <!-- form  -->
-    <!--Loreto, when you style these buttons, please make sure to keep the same id. Carolina :)-->
-    <!-- category button1  -->
-    <button id="fitness" class="ui huge primary button categoryBtn">
-      fitness
-    </button>
-    <!-- category button2  -->
-    <button id="chores" class="ui huge primary button categoryBtn">
-      Chores
-    </button>
-    <!-- category button3  -->
-    <button id="study" class="ui huge primary button categoryBtn">Study</button>
-    <!-- category button4  -->
-    <button id="calm" class="ui huge primary button categoryBtn">Calm</button>
-    <!-- category button5  -->
-    <button id="read" class="ui huge primary button categoryBtn">Read</button>
-    <!-- category button6  -->
-    <button id="dance" class="ui huge primary button categoryBtn">Dance</button>
+    <!-- Main Content Container  -->
+    <div class="main">
+      <!-- form title  -->
+      <!-- form  -->
+      <!--Loreto, when you style these buttons, please make sure to keep the same id. Carolina :)-->
+      <!-- category button1  -->
+      <button id="fitness" class="ui huge primary button categoryBtn">
+        fitness
+      </button>
+      <!-- category button2  -->
+      <button id="chores" class="ui huge primary button categoryBtn">
+        Chores
+      </button>
+      <!-- category button3  -->
+      <button id="study" class="ui huge primary button categoryBtn">
+        Study
+      </button>
+      <!-- category button4  -->
+      <button id="calm" class="ui huge primary button categoryBtn">Calm</button>
+      <!-- category button5  -->
+      <button id="read" class="ui huge primary button categoryBtn">Read</button>
+      <!-- category button6  -->
+      <button id="dance" class="ui huge primary button categoryBtn">
+        Dance
+      </button>
+    </div>
 
     <!-- footer  -->
+    <div class="ui secondary menu footer"></div>
     <!-- navbar  -->
     <!-- back button -left  -->
     <!-- home button -right  -->
