--- a/recs.html
+++ b/recs.html
@@ -21,14 +21,16 @@
       </div>
     </div>
 
-    <h1>Get Rec'd</h1>
-    <div id="category"></div>
-    <div id="carousel"></div>
+    <div class="main">
+      <h1>Get Rec'd</h1>
+      <div id="category"></div>
+      <div id="carousel"></div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- script for semantic framework -->
-    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-    <!-- link to js file -->
-    <script src="recs.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <!-- script for semantic framework -->
+      <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+      <!-- link to js file -->
+      <script src="recs.js"></script>
+    </div>
   </body>
 </html>
