set footer background to white

--- a/categories.html
+++ b/categories.html
@@ -24,11 +24,11 @@
     <!-- header -->
     <!-- logo/home button -left -->
     <!-- settings button -right -->
-    <h1>This is the categories/genre page</h1>
 
-    <!-- Main Content Container  -->
+    <!-- container  -->
     <div class="main">
       <!-- form title  -->
+      <h1>This is the categories/genre page</h1>
       <!-- form  -->
       <!--Loreto, when you style these buttons, please make sure to keep the same id. Carolina :)-->
       <!-- category button1  -->
@@ -52,12 +52,11 @@
         Dance
       </button>
     </div>
-
     <!-- footer  -->
-    <div class="ui secondary menu footer"></div>
-    <!-- navbar  -->
-    <!-- back button -left  -->
-    <!-- home button -right  -->
+    <div class="ui secondary menu footer">
+      <!-- back button -left  -->
+      <!-- home button -right  -->
+    </div>
 
     <!-- link to AJAX cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
