--- a/recs.html
+++ b/recs.html
@@ -14,12 +14,12 @@
   </head>
   <body>
     <!-- navbar -->
-    <div class="ui secondary pointing menu">
+    <nav class="ui secondary pointing menu">
       <a class="active item"> Logo Goes here </a>
       <div class="right menu">
         <a class="ui item"> Settings </a>
       </div>
-    </div>
+    </nav>
 
     <h1>Get Rec'd</h1>
     <div id="category"></div>
