set background color of buttons to specified theme color

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- start button to go to next page -->
         <button
           onclick="location.href='categories.html';"
-          class="ui huge primary button"
+          class="ui huge primary button categoryBtn"
         >
           START
         </button>
