--- a/categories.html
+++ b/categories.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rec App - Categories</title>
 
+    <!-- link to font awesome cdn  -->
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
     <!-- link to CSS framework cdn -->
     <link
       rel="stylesheet"
@@ -54,8 +61,8 @@
     </div>
     <!-- footer  -->
     <div class="ui secondary menu footer">
-      <!-- back button -left  -->
-      <!-- home button -right  -->
+      <span>Back Icon goes here</span>
+      <span>Home Icon goes here</span>
     </div>
 
     <!-- link to AJAX cdn -->
