added icons to nav buttons

--- a/categories.html
+++ b/categories.html
@@ -25,7 +25,7 @@
     <div class="ui secondary pointing menu">
       <a class="active item"> Logo Goes here </a>
       <div class="right menu">
-        <a class="ui item"> Settings </a>
+        <a class="ui item"><i class="fas fa-user-cog"></i></a>
       </div>
     </div>
     <!-- header -->
@@ -61,8 +61,10 @@
     </div>
     <!-- footer  -->
     <div class="ui secondary menu footer">
-      <span>Back Icon goes here</span>
-      <span>Home Icon goes here</span>
+      <a class="active item"><i class="fas fa-arrow-circle-left"></i></a>
+      <div class="right menu">
+        <a class="ui item"><i class="fas fa-home"></i></a>
+      </div>
     </div>
 
     <!-- link to AJAX cdn -->
