--- a/recs.html
+++ b/recs.html
@@ -19,7 +19,7 @@
     <nav class="ui secondary pointing menu">
       <a class="active item"> Logo Goes here </a>
       <div class="right menu">
-        <a class="ui item"> Settings </a>
+        <a class="ui item"><i class="fas fa-user-cog"></i></a>
       </div>
     </nav>
 
