--- a/recs.html
+++ b/recs.html
@@ -47,11 +47,27 @@
           <p>Album5: Title</p>
           <p>Released: YYYY</p>
       </div>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <!-- script for semantic framework -->
-      <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-      <!-- link to js file -->
-      <script src="recs.js"></script>
+
+      <!-- Audio Control Section  -->
+      <div class="audioSection">
+        <button>Play</button>
+        <button>Pause</button>
+      </div>
+
     </div>
+       
+    <!-- footer  -->
+    <div class="ui secondary menu footer">
+      <a class="active item"><i class="fas fa-arrow-circle-left"></i></a>
+      <div class="right menu">
+        <a class="ui item"><i class="fas fa-home"></i></a>
+      </div>
+    </div>
+    <!-- link to jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- script for semantic framework -->
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+    <!-- link to js file -->
+    <script src="recs.js"></script>
   </body>
 </html>
