added audio playback functionality to rec'd page

--- a/recs.html
+++ b/recs.html
@@ -49,9 +49,11 @@
       </div>
 
       <!-- Audio Control Section  -->
+      <audio id="audioSource" src="./Audio/Mood.mp3"></audio>
+
       <div class="audioSection">
-        <button>Play</button>
-        <button>Pause</button>
+        <button id="playBtn">Play</button>
+        <button id="pauseBtn">Pause</button>
       </div>
 
     </div>
