added random choice function for audio choice uses

--- a/index.html
+++ b/index.html
@@ -16,16 +16,10 @@
   <body id="welcomePage">
     <!-- nav bar  -->
     <div class="ui pointing menu">
-      <a class="active item"> Home </a>
-      <a class="item"> Messages </a>
-      <a class="item"> Friends </a>
-      <!-- container -->
-      <!-- header element -->
+      <a class="active item">Logo Goes Here</a>
       <!-- logo (button) -left -->
       <!-- settings/login (button) -right -->
     </div>
-
-    <!-- nav bar ends  -->
 
     <!-- div for homepage content -->
     <div
