downloaded owl files into my machine and added a new folder in here named owlcarousel

--- a/recs.html
+++ b/recs.html
@@ -13,7 +13,13 @@
     />
     <!-- link to style.css  -->
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Links from Owl Carousel -->
+    <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
+<link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
+<script src="owlcarousel/owl.carousel.min.js"></script>
   </head>
+  <!-- ********** BODY START *********** -->
   <body>
     <!-- navbar -->
     <nav class="ui secondary pointing menu">
@@ -22,11 +28,6 @@
         <a class="ui item"><i class="fas fa-user-cog"></i></a>
       </div>
     </nav>
-
-    <h1>Get Rec'd</h1>
-    
-    <div id="category"></div>
-    <div id="carousel"></div>
     
     <div class="main">
       <h1>Get Rec'd</h1>
@@ -69,6 +70,7 @@
         <a class="ui item"><i class="fas fa-home"></i></a>
       </div>
     </div>
+
     <!-- link to jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- script for semantic framework -->
