--- a/recs.html
+++ b/recs.html
@@ -19,20 +19,16 @@
     <!-- link to style.css  -->
     <link rel="stylesheet" href="style.css" />
 
-
-
     <!-- Links from Owl Carousel -->
-    <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css" />
 
+    <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css" />
 
+    <!-- link to jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-<link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
-
-     <!-- link to jquery -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-     <!-- Link from owl javascript -->
-<script src="owlcarousel/owl.carousel.min.js"></script>
+    <!-- Link from owl javascript -->
+    <script src="owlcarousel/owl.carousel.min.js"></script>
   </head>
   <!-- ********** BODY START *********** -->
   <body>
@@ -49,11 +45,9 @@
       <!-- carrousel start  -->
       <div id="category"></div>
 
-      <div class="owl-carousel">
-        
-      </div>
+      <div class="owl-carousel"></div>
       <!-- carrousel end  -->
-    
+
       <div id="carousel"></div>
 
       <!-- populate area with music info - list of generated artists' albums-->
@@ -92,5 +86,6 @@
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <!-- link to js file -->
     <script src="recs.js"></script>
+    <script src="music.js"></script>
   </body>
 </html>
