added data values to catergory buttons

--- a/categories.html
+++ b/categories.html
@@ -38,29 +38,55 @@
       <h1>This is the categories/genre page</h1>
       <!-- form  -->
       <!--Loreto, when you style these buttons, please make sure to keep the same id. Carolina :)-->
-      
+
       <!-- Random Button  -->
-      <button id="random" class="ui huge primary button">
-        Random
-      </button>
+      <button id="random" class="ui huge primary button">Random</button>
       <!-- category button1  -->
-      <button id="fitness" class="ui huge primary button categoryBtn">
+      <button
+        id="fitness"
+        class="ui huge primary button categoryBtn"
+        data-value="0"
+      >
         fitness
       </button>
       <!-- category button2  -->
-      <button id="chores" class="ui huge primary button categoryBtn">
+      <button
+        id="chores"
+        class="ui huge primary button categoryBtn"
+        data-value="1"
+      >
         Chores
       </button>
       <!-- category button3  -->
-      <button id="study" class="ui huge primary button categoryBtn">
+      <button
+        id="study"
+        class="ui huge primary button categoryBtn"
+        data-value="2"
+      >
         Study
       </button>
       <!-- category button4  -->
-      <button id="calm" class="ui huge primary button categoryBtn">Calm</button>
+      <button
+        id="calm"
+        class="ui huge primary button categoryBtn"
+        data-value="3"
+      >
+        Calm
+      </button>
       <!-- category button5  -->
-      <button id="read" class="ui huge primary button categoryBtn">Read</button>
+      <button
+        id="read"
+        class="ui huge primary button categoryBtn"
+        data-value="4"
+      >
+        Read
+      </button>
       <!-- category button6  -->
-      <button id="dance" class="ui huge primary button categoryBtn">
+      <button
+        id="dance"
+        class="ui huge primary button categoryBtn"
+        data-value="5"
+      >
         Dance
       </button>
     </div>
