--- a/categories.html
+++ b/categories.html
@@ -103,6 +103,7 @@
     <!-- script for semantic framework -->
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <!-- link to js file -->
+    <script src="music.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
