--- a/recs.html
+++ b/recs.html
@@ -64,17 +64,16 @@
         <p>Album5: Title</p>
         <p>Released: YYYY</p>
       </div>
+    </div>
 
+    <!-- footer  -->
+    <div class="ui secondary menu footer">
+      <a class="item"><i class="fas fa-arrow-circle-left"></i></a>
       <!-- Audio Control Section  -->
       <div class="audioSection">
         <button id="playBtn">Play</button>
         <button id="pauseBtn">Pause</button>
       </div>
-    </div>
-
-    <!-- footer  -->
-    <div class="ui secondary menu footer">
-      <a class="active item"><i class="fas fa-arrow-circle-left"></i></a>
       <div class="right menu">
         <a class="ui item"><i class="fas fa-home"></i></a>
       </div>
