--- a/categories.html
+++ b/categories.html
@@ -92,7 +92,7 @@
     </div>
     <!-- footer  -->
     <div class="ui secondary menu footer">
-      <a class="active item"><i class="fas fa-arrow-circle-left"></i></a>
+      <a class="item"><i class="fas fa-arrow-circle-left"></i></a>
       <div class="right menu">
         <a class="ui item"><i class="fas fa-home"></i></a>
       </div>
