--- a/recs.html
+++ b/recs.html
@@ -51,7 +51,7 @@
       <div id="carousel"></div>
 
       <!-- populate area with music info - list of generated artists' albums-->
-      <div id="disog"></div>
+      <div id="discog"></div>
     </div>
 
     <!-- footer  -->
