added logo on nav bars

--- a/categories.html
+++ b/categories.html
@@ -23,7 +23,7 @@
   <body>
     <!-- navbar -->
     <div class="ui secondary pointing menu">
-      <a class="active item"> Logo Goes here </a>
+      <a class="active item"> <img src="images/r-in-symbol.png" alt="Rec logo"> </a>
       <div class="right menu">
         <a class="ui item"><i class="fas fa-user-cog"></i></a>
       </div>
@@ -40,11 +40,11 @@
       <!--Loreto, when you style these buttons, please make sure to keep the same id. Carolina :)-->
 
       <!-- Random Button  -->
-      <button id="random" class="ui huge primary button">Random</button>
+      <button id="random" class="ui huge primary button appButton">Random</button>
       <!-- category button1  -->
       <button
         id="fitness"
-        class="ui huge primary button categoryBtn"
+        class="ui huge primary button categoryBtn appButton"
         data-value="0"
       >
         fitness
@@ -52,7 +52,7 @@
       <!-- category button2  -->
       <button
         id="chores"
-        class="ui huge primary button categoryBtn"
+        class="ui huge primary button categoryBtn appButton"
         data-value="1"
       >
         Chores
@@ -60,7 +60,7 @@
       <!-- category button3  -->
       <button
         id="study"
-        class="ui huge primary button categoryBtn"
+        class="ui huge primary button categoryBtn appButton"
         data-value="2"
       >
         Study
@@ -68,7 +68,7 @@
       <!-- category button4  -->
       <button
         id="calm"
-        class="ui huge primary button categoryBtn"
+        class="ui huge primary button categoryBtn appButton"
         data-value="3"
       >
         Calm
@@ -76,7 +76,7 @@
       <!-- category button5  -->
       <button
         id="read"
-        class="ui huge primary button categoryBtn"
+        class="ui huge primary button categoryBtn appButton"
         data-value="4"
       >
         Read
@@ -84,13 +84,13 @@
       <!-- category button6  -->
       <button
         id="dance"
-        class="ui huge primary button categoryBtn"
+        class="ui huge primary button categoryBtn appButton"
         data-value="5"
       >
         Dance
       </button>
     </div>
-    
+
     <!-- footer  -->
     <div class="ui secondary menu footer">
       <a class="item"><i class="fas fa-arrow-circle-left"></i></a>
