--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body id="welcomePage">
     <!-- nav bar  -->
     <div class="ui pointing menu">
-      <a class="active item">Logo Goes Here</a>
+      <a class="active item"><img src="images/r-in-symbol.png" alt="Rec logo"></a>
       <!-- logo (button) -left -->
       <!-- settings/login (button) -right -->
     </div>
@@ -37,7 +37,7 @@
         <!-- start button to go to next page -->
         <button
           onclick="location.href='categories.html';"
-          class="ui huge primary button categoryBtn"
+          class="ui huge primary button categoryBtn appButton"
         >
           START
         </button>
