--- a/recs.html
+++ b/recs.html
@@ -34,7 +34,7 @@
   <body>
     <!-- navbar -->
     <nav class="ui secondary pointing menu">
-      <a class="active item"> Logo Goes here </a>
+      <a class="active item"> <img src="images/r-in-symbol.png" alt="Rec logo"> </a>
       <div class="right menu">
         <a class="ui item"><i class="fas fa-user-cog"></i></a>
       </div>
