added css  changes to footer

--- a/recs.html
+++ b/recs.html
@@ -34,7 +34,9 @@
   <body>
     <!-- navbar -->
     <nav class="ui secondary pointing menu">
-      <a class="active item"> <img src="images/r-in-symbol.png" alt="Rec logo"> </a>
+      <a class="active item">
+        <img src="images/r-in-symbol.png" alt="Rec logo" />
+      </a>
       <div class="right menu">
         <a class="ui item"><i class="fas fa-user-cog"></i></a>
       </div>
@@ -56,6 +58,7 @@
 
     <!-- footer  -->
     <div class="ui secondary menu footer">
+      <div class="blue"></div>
       <a class="item"><i class="fas fa-arrow-circle-left"></i></a>
       <!-- Audio Control Section  -->
       <div class="audioSection">
