added href to footer buttons

--- a/categories.html
+++ b/categories.html
@@ -35,7 +35,7 @@
     <!-- container  -->
     <div class="main">
       <!-- form title  -->
-      <h1>This is the categories/genre page</h1>
+      <h1>Select a Category</h1>
       <!-- form  -->
       <!--Loreto, when you style these buttons, please make sure to keep the same id. Carolina :)-->
 
@@ -93,9 +93,9 @@
 
     <!-- footer  -->
     <div class="ui secondary menu footer">
-      <a class="item"><i class="fas fa-arrow-circle-left"></i></a>
+      <a href="index.html" class="item"><i class="fas fa-arrow-circle-left"></i></a>
       <div class="right menu">
-        <a class="ui item"><i class="fas fa-home"></i></a>
+        <a href="index.html" class="ui item"><i class="fas fa-home"></i></a>
       </div>
     </div>
 
