--- a/recs.html
+++ b/recs.html
@@ -59,14 +59,14 @@
     <!-- footer  -->
     <div class="ui secondary menu footer">
       <div class="blue"></div>
-      <a class="item"><i class="fas fa-arrow-circle-left"></i></a>
+      <a href="categories.html" class="item"><i class="fas fa-arrow-circle-left"></i></a>
       <!-- Audio Control Section  -->
       <div class="audioSection">
         <button id="playBtn">Play</button>
         <button id="pauseBtn">Pause</button>
       </div>
       <div class="right menu">
-        <a class="ui item"><i class="fas fa-home"></i></a>
+        <a href="index.html" class="ui item"><i class="fas fa-home"></i></a>
       </div>
     </div>
 
