debug. added pseudo code. minor stling changes

--- a/categories.html
+++ b/categories.html
@@ -33,7 +33,7 @@
     <!-- settings button -right -->
 
     <!-- container  -->
-    <div class="main">
+    <div id="catButtons" class="main">
       <!-- form title  -->
       <h1>Select a Category</h1>
       <!-- form  -->
