added ids and styles

--- a/categories.html
+++ b/categories.html
@@ -34,11 +34,9 @@
 
     <!-- container  -->
     <div id="catButtons" class="main">
-      <!-- form title  -->
+      <!-- title  -->
       <h1>Select a Category</h1>
       <!-- form  -->
-      <!--Loreto, when you style these buttons, please make sure to keep the same id. Carolina :)-->
-
       <!-- Random Button  -->
       <button id="random" class="ui huge primary button appButton">Random</button>
       <!-- category button1  -->
