--- a/recs.html
+++ b/recs.html
@@ -42,7 +42,7 @@
       </div>
     </nav>
 
-    <div class="main">
+    <div id="recdPage" class="main">
       <h1>Get Rec'd</h1>
       <!-- carrousel start  -->
       <div id="category"></div>
