--- a/categories.html
+++ b/categories.html
@@ -23,7 +23,7 @@
   <body>
     <!-- navbar -->
     <div class="ui secondary pointing menu">
-      <a class="active item"> <img src="images/r-in-symbol.png" alt="Rec logo"> </a>
+      <a class="active item"> <img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo"> </a>
       <div class="right menu">
         <a class="ui item"><i class="fas fa-user-cog"></i></a>
       </div>
