--- a/recs.html
+++ b/recs.html
@@ -35,7 +35,7 @@
     <!-- navbar -->
     <nav class="ui secondary pointing menu">
       <a class="active item">
-        <img src="images/r-in-symbol.png" alt="Rec logo" />
+        <img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo" />
       </a>
       <div class="right menu">
         <a class="ui item"><i class="fas fa-user-cog"></i></a>
