--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body id="welcomePage">
     <!-- nav bar  -->
     <div class="ui pointing menu">
-      <a class="active item"><img src="images/r-in-symbol.png" alt="Rec logo"></a>
+      <a class="active item"><img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo"></a>
       <!-- logo (button) -left -->
       <!-- settings/login (button) -right -->
     </div>
