removed settings icon from nav. changed footer icon sizes

--- a/categories.html
+++ b/categories.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rec App - Categories</title>
+    <title>Categories</title>
 
     <!-- link to font awesome cdn  -->
     <link
@@ -21,24 +21,26 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- navbar -->
-    <div class="ui secondary pointing menu">
-      <a class="active item"> <img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo"> </a>
-      <div class="right menu">
+    <!-- Navbar -->
+    <div class="ui secondary menu">
+      <a class="item">
+        <img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo" />
+      </a>
+      <!-- settings button -right -->
+      <!-- <div class="right menu">
         <a class="ui item"><i class="fas fa-user-cog"></i></a>
-      </div>
+      </div> -->
     </div>
-    <!-- header -->
-    <!-- logo/home button -left -->
-    <!-- settings button -right -->
 
-    <!-- container  -->
+    <!-- Button Container  -->
     <div id="catButtons" class="main">
       <!-- title  -->
       <h1>Select a Category</h1>
       <!-- form  -->
       <!-- Random Button  -->
-      <button id="random" class="ui huge primary button appButton">Random</button>
+      <button id="random" class="ui huge primary button appButton">
+        Random
+      </button>
       <!-- category button1  -->
       <button
         id="fitness"
@@ -89,11 +91,15 @@
       </button>
     </div>
 
-    <!-- footer  -->
+    <!-- Footer  -->
     <div class="ui secondary menu footer">
-      <a href="index.html" class="item"><i class="fas fa-arrow-circle-left"></i></a>
+      <a href="index.html" class="item"
+        ><i class="fas fa-arrow-circle-left fa-3x"></i
+      ></a>
       <div class="right menu">
-        <a href="index.html" class="ui item"><i class="fas fa-home"></i></a>
+        <a href="index.html" class="ui item"
+          ><i class="fas fa-home fa-3x"></i
+        ></a>
       </div>
     </div>
 
