--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rec App - Home</title>
+    <title>Rec - Home</title>
 
     <!-- link to CSS framework cdn -->
     <link
@@ -15,13 +15,14 @@
   </head>
   <body id="welcomePage">
     <!-- nav bar  -->
-    <div class="ui pointing menu">
-      <a class="active item"><img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo"></a>
+    <div class="ui menu">
       <!-- logo (button) -left -->
-      <!-- settings/login (button) -right -->
+      <a class="item"
+        ><img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo"
+      /></a>
     </div>
 
-    <!-- div for homepage content -->
+    <!-- homepage content -->
     <div
       class="ui inverted vertical masterhead center aligned segment"
       id="startingContent"
