--- a/recs.html
+++ b/recs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rec</title>
+    <title>Recs</title>
     <!-- link to font awesome cdn  -->
     <link
       rel="stylesheet"
@@ -34,12 +34,12 @@
   <body>
     <!-- navbar -->
     <nav class="ui secondary pointing menu">
-      <a class="active item">
+      <a class="item">
         <img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo" />
       </a>
-      <div class="right menu">
+      <!-- <div class="right menu">
         <a class="ui item"><i class="fas fa-user-cog"></i></a>
-      </div>
+      </div> -->
     </nav>
 
     <div id="recdPage" class="main">
@@ -57,14 +57,18 @@
 
     <!-- footer  -->
     <div class="ui secondary menu footer">
-      <a href="categories.html" class="item"><i class="fas fa-arrow-circle-left"></i></a>
+      <a href="categories.html" class="item"
+        ><i class="fas fa-arrow-circle-left fa-3x"></i
+      ></a>
       <!-- Audio Control Section  -->
       <div class="audioSection">
         <button id="playBtn">Play</button>
         <button id="pauseBtn">Pause</button>
       </div>
       <div class="right menu">
-        <a href="index.html" class="ui item"><i class="fas fa-home"></i></a>
+        <a href="index.html" class="ui item"
+          ><i class="fas fa-home fa-3x"></i
+        ></a>
       </div>
     </div>
 
