Added placeholder info for artist on recs.html

--- a/recs.html
+++ b/recs.html
@@ -52,7 +52,18 @@
       <!-- carrousel end  -->
 
       <!-- populate area with music info - list of generated artists' albums-->
-      <div id="discog"></div>
+      <div id="discog">
+          <h4 id="artist-name">
+            Artist: Bill Evans
+          </h4>
+          <h5 id="song-playing">
+            Now Playing: Nardis
+          </h5>
+        <div id="album-list">
+          <p>Like your Rec? Check out more from this artist!</p>
+
+        </div>
+      </div>
     </div>
 
     <!-- footer  -->
