styled logo. removed nav bar on welcome page. styled text container on welcome page

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body id="welcomePage">
-    <!-- nav bar  -->
-    <div class="ui menu">
-      <!-- logo (button) -left -->
+    <!-- logo (button) -left -->
+    <div class="container" id="logoContainer">
       <a class="item"
-        ><img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo"
+        ><img
+          src="images/symbol-small-r-bttm-rgt.png"
+          alt="Rec logo"
+          id="logoIcon"
       /></a>
     </div>
 
