Added table to recs.html

--- a/recs.html
+++ b/recs.html
@@ -61,7 +61,26 @@
           </h5>
         <div id="album-list">
           <p>Like your Rec? Check out more from this artist!</p>
-
+          <table class="ui celled table">
+            <thead>
+              <tr><th>Name</th>
+              <th>Age</th>
+            </tr></thead>
+            <tbody>
+              <tr>
+                <td data-label="Name">James</td>
+                <td data-label="Age">24</td>
+              </tr>
+              <tr>
+                <td data-label="Name">Jill</td>
+                <td data-label="Age">26</td>
+              </tr>
+              <tr>
+                <td data-label="Name">Elyse</td>
+                <td data-label="Age">24</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
