Updated placeholder content for discog table in recs.html

--- a/recs.html
+++ b/recs.html
@@ -63,21 +63,21 @@
           <p>Like your Rec? Check out more from this artist!</p>
           <table class="ui celled table">
             <thead>
-              <tr><th>Name</th>
-              <th>Age</th>
+              <tr><th>Album</th>
+              <th>Release Year</th>
             </tr></thead>
             <tbody>
               <tr>
-                <td data-label="Name">James</td>
-                <td data-label="Age">24</td>
+                <td data-label="album-name">BleepBlorp</td>
+                <td data-label="release-year">YYYY</td>
               </tr>
               <tr>
-                <td data-label="Name">Jill</td>
-                <td data-label="Age">26</td>
+                <td data-label="album-name">BloopBlop</td>
+                <td data-label="release-year">YYYY</td>
               </tr>
               <tr>
-                <td data-label="Name">Elyse</td>
-                <td data-label="Age">24</td>
+                <td data-label="album-name">MeepMeep</td>
+                <td data-label="release-year">YYYY</td>
               </tr>
             </tbody>
           </table>
