Changed a button's content in categories.html

--- a/categories.html
+++ b/categories.html
@@ -47,7 +47,7 @@
         class="ui huge primary button categoryBtn appButton"
         data-value="0"
       >
-        fitness
+        Fitness
       </button>
       <!-- category button2  -->
       <button
