added link to index page in the logo icon

--- a/categories.html
+++ b/categories.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Navbar -->
     <div class="ui secondary menu">
-      <a class="item">
+      <a class="item" href="index.html">
         <img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo" />
       </a>
       <!-- settings button -right -->
