--- a/recs.html
+++ b/recs.html
@@ -34,7 +34,7 @@
   <body>
     <!-- navbar -->
     <nav class="ui secondary pointing menu">
-      <a class="item">
+      <a class="item" href="index.html">
         <img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo" />
       </a>
       <!-- <div class="right menu">
@@ -53,19 +53,17 @@
 
       <!-- populate area with music info - list of generated artists' albums-->
       <div id="discog">
-          <h4 id="artist-name">
-            Artist: Bill Evans
-          </h4>
-          <h5 id="song-playing">
-            Now Playing: Nardis
-          </h5>
+        <h4 id="artist-name">Artist: Bill Evans</h4>
+        <h5 id="song-playing">Now Playing: Nardis</h5>
         <div id="album-list">
           <p>Like your Rec? Check out more from this artist!</p>
           <table class="ui celled table">
             <thead>
-              <tr><th>Album</th>
-              <th>Release Year</th>
-            </tr></thead>
+              <tr>
+                <th>Album</th>
+                <th>Release Year</th>
+              </tr>
+            </thead>
             <tbody>
               <tr>
                 <td data-label="album-name">BleepBlorp</td>
