Added rec text logo to index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     >
       <div class="ui text container" id="textContainer">
         <!-- app name -->
-        <h1>REC</h1>
+        <img src="images/just-rec.png" alt="Rec Text Logo">
         <!-- subtext -->
         <h2>
           Expand your world. Discover something new. Take a moment and explore
