added shadow to buttons

--- a/recs.html
+++ b/recs.html
@@ -33,7 +33,7 @@
   <!-- ********** BODY START *********** -->
   <body>
     <!-- navbar -->
-    <nav class="ui secondary pointing menu">
+    <nav class="ui secondary menu">
       <a class="item" href="index.html">
         <img src="images/symbol-small-r-bttm-rgt.png" alt="Rec logo" />
       </a>
