made styling changes to categories page and recs

--- a/categories.html
+++ b/categories.html
@@ -33,9 +33,9 @@
     </div>
 
     <!-- Button Container  -->
-    <div id="catButtons" class="main">
+    <div id="catButtons" class="main" style="padding-top: 40px">
       <!-- title  -->
-      <h1>Select a Category</h1>
+      <h1 id="catHeading">Select a Category</h1>
       <!-- form  -->
       <!-- Random Button  -->
       <button id="random" class="ui huge primary button appButton">
@@ -47,7 +47,7 @@
         class="ui huge primary button categoryBtn appButton"
         data-value="0"
       >
-        fitness
+        Fitness
       </button>
       <!-- category button2  -->
       <button
