--- a/recs.html
+++ b/recs.html
@@ -44,12 +44,9 @@
 
     <div id="recdPage" class="main">
       <h1>Get Rec'd</h1>
-      <!-- carrousel start  -->
-      <div id="category"></div>
-
+      <!-- Carrousel  -->
       <div class="owl-carousel"></div>
       <div id="carousel"></div>
-      <!-- carrousel end  -->
 
       <!-- populate area with music info - list of generated artists' albums-->
       <div id="discog">
