Styled start button

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <button
           onclick="location.href='categories.html';"
           class="ui huge primary button categoryBtn appButton"
+          id="startBtn"
         >
           START
         </button>
