--- a/recs.html
+++ b/recs.html
@@ -81,12 +81,33 @@
     </div>
 
     <!-- footer  -->
-    <div class="ui secondary menu footer">
+    <div class="ui grid footer">
+      <div class="three wide column">
+        <a href="categories.html" class="item"
+          ><i class="fas fa-arrow-circle-left fa-3x"></i
+        ></a>
+      </div>
+      <div class="center aligned ten wide column">
+        <!-- Audio Control Section  -->
+        <div class="audioSection">
+          <i class="far fa-play-circle fa-3x" id="playBtn"></i>
+          <i class="far fa-pause-circle fa-3x" id="pauseBtn"></i>
+        </div>
+      </div>
+      <div class="right aligned three wide column">
+        <a href="index.html" class="ui item"
+          ><i class="fas fa-home fa-3x"></i
+        ></a>
+      </div>
+    </div>
+
+    <!-- footer  -->
+    <!-- <div class="ui secondary menu footer">
       <a href="categories.html" class="item"
         ><i class="fas fa-arrow-circle-left fa-3x"></i
-      ></a>
-      <!-- Audio Control Section  -->
-      <div class="audioSection">
+      ></a> -->
+    <!-- Audio Control Section  -->
+    <!-- <div class="audioSection">
         <button id="playBtn">Play</button>
         <button id="pauseBtn">Pause</button>
       </div>
@@ -95,7 +116,7 @@
           ><i class="fas fa-home fa-3x"></i
         ></a>
       </div>
-    </div>
+    </div> -->
 
     <!-- script for semantic framework -->
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
